# ZDownload

./: .pre-commit-config.yaml  AGENTS.md  LICENSE  Makefile  README.md  code_snapshot.json  code_snapshot.md  context_snapshot.json  context_snapshot.md  init.sh  requirements.txt
ZDownloadManager/: README.md  pyproject.toml  requirements.txt
ZDownloadManager/chrome_extension/: background.js  manifest.json
ZDownloadManager/install/: host.json.template  install_host_macos.sh  install_host_windows.ps1  macos_quick_action.md  windows_context_menu.reg
ZDownloadManager/tests/: test_cli.py  test_code_scanner.py  test_config.py  test_context_snapshot.py  test_downloader.py  test_github_adapter.py  test_library_cli.py  test_openrouter_models.py  test_organizer.py  test_scraper.py  test_suggestions_cache.py  test_webscraper.py
ZDownloadManager/zdownloadmanager/: __init__.py  cli.py
ZDownloadManager/zdownloadmanager/core/: config.py  downloader.py  github_adapter.py  library.py  organizer.py  scraper.py  suggestions.py  webscraper.py
ZDownloadManager/zdownloadmanager/integration/: native_messaging_host.py  protocol_handler.py
ZDownloadManager/zdownloadmanager/ui/: actions_editor.py  main_window.py
scripts/: code_scan.py  context_snapshot.py  github_tools.py  llm_suggest.py  openrouter_models.py
